[gd_scene load_steps=8 format=3 uid="uid://bl3chbfd40ncq"]

[ext_resource type="Script" path="res://Scripts/Classes/commander.gd" id="1_4r3id"]
[ext_resource type="Texture2D" uid="uid://bv58vt22wws37" path="res://Assets/My Sprites/LowCommander.png" id="1_yloek"]
[ext_resource type="Texture2D" uid="uid://dmd6hhe385fxn" path="res://Assets/My Sprites/circle.png" id="3_gagrk"]
[ext_resource type="PackedScene" uid="uid://cv2gd7qiksr6n" path="res://Scenes/UI_Scenes/commander_stats.tscn" id="3_gmq1k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xt5r4"]
size = Vector2(23, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_awnc2"]
radius = 17.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ngnaw"]
radius = 137.768

[node name="Commander" type="CharacterBody2D" groups=["Commander"]]
collision_layer = 0
script = ExtResource("1_4r3id")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
texture = ExtResource("1_yloek")

[node name="Selected" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_yloek")

[node name="AreaofCommandSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.376471, 0.792157, 1, 0.337255)
z_index = -1
z_as_relative = false
scale = Vector2(0.445, 0.445)
texture = ExtResource("3_gagrk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 19)
shape = SubResource("RectangleShape2D_xt5r4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_awnc2")

[node name="AreaofCommand" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaofCommand"]
visible = false
shape = SubResource("CircleShape2D_ngnaw")

[node name="CommanderStats" parent="." instance=ExtResource("3_gmq1k")]
visible = false

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="body_entered" from="AreaofCommand" to="." method="_on_areaof_command_body_entered"]
[connection signal="body_exited" from="AreaofCommand" to="." method="_on_areaof_command_body_exited"]
